[package]
name = "mwkb"
version = "0.1.0"
authors = ["reiyw <reiyw.setuve@gmail.com>"]

[dependencies]
reqwest = "0.9.4"
csv = "1.0.2"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
failure = "0.1.3"
regex = "1.0.6"
lazy_static = "1.2.0"
parse_wiki_text = "0.1.2"
url = "1.7.2"
glob = "0.2.11"
